# rs-soroban-sdk

./: .gitignore  CCW.wasm  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README  README.md  RELEASING.md  deny.toml  rust-toolchain.toml  soroban-sdk-nexus  soroban_analyzer.rs  spec_marking_v2_test.md  test_workspace_contract_b.wasm
array_from_lit_int/: Cargo.toml
array_from_lit_int/src/: lib.rs
cache-to-file/: Cargo.toml
cache-to-file/src/: lib.rs
cli/: Cargo.toml
cli/src/: invoke.rs  main.rs  strval.rs
examples/add/: Cargo.toml
examples/add/src/: lib.rs
macros/: Cargo.toml
macros/src/: args.rs  derive_and_spec_fn.rs  derive_fn.rs  derive_type.rs  lib.rs  map_type.rs  spec_type.rs  type_def_from_str.rs  wrap_and_spec_fn.rs
macros/tests/: i32.rs
sdk/: Cargo.toml
sdk/src/: account.rs  bigint.rs  bignum.rs  binary.rs  contract.rs  contract_data.rs  env.rs  env_obj_type.rs  guest.rs  host.rs  host_wasmnot.rs  iter.rs  ledger.rs  lib.rs  map.rs  object.rs  object_type.rs  result.rs  rt.rs  serde.rs  status.rs  symbol.rs  test_contract.rs  test_sign.rs  testing.rs  u32usize.rs  val.rs  vec.rs
sdk/src/testing/: debug.rs  fs.rs  host.rs  mem.rs
sdk/tests/: assert_panic.rs  macros_fails.rs  macros_spec_i32.rs  macros_spec_udt.rs
soroban-account/: Cargo.toml
soroban-account/src/: lib.rs
soroban-auth/: Cargo.toml  README.md
soroban-auth/src/: lib.rs  public_types.rs  test.rs  tests.rs  testutils.rs
soroban-auth/tests/: test.rs
soroban-ledger-fetch/: Cargo.toml
soroban-ledger-fetch/src/: lib.rs
soroban-ledger-meta-downloader/: Cargo.toml  README.md
soroban-ledger-meta-downloader-cli/: Cargo.toml
soroban-ledger-meta-downloader-cli/src/: main.rs
soroban-ledger-meta-downloader/src/: lib.rs
soroban-ledger-meta-snapshot-source/: Cargo.toml
soroban-ledger-meta-snapshot-source/src/: lib.rs
soroban-ledger-snapshot/: Cargo.toml
soroban-ledger-snapshot-history-archive/: Cargo.toml
soroban-ledger-snapshot-history-archive/src/: lib.rs
soroban-ledger-snapshot-source-live/: Cargo.toml
soroban-ledger-snapshot-source-live/src/: lib.rs
soroban-ledger-snapshot-source-tx/: Cargo.toml  README.md
soroban-ledger-snapshot-source-tx/src/: cache.rs  lib.rs
soroban-ledger-snapshot/src/: lib.rs  tests.rs
soroban-ledger-snapshot/test_data/: snapshot_not_compact.json  snapshot_v2.json
soroban-ledger-snapshot/test_snapshots/: snapshot_compact.json
soroban-meta/: Cargo.toml
soroban-meta/src/: lib.rs  read.rs  tests.rs
soroban-sdk/: Cargo.toml  README.md  build.rs  file.json
soroban-sdk-auth/: Cargo.toml
soroban-sdk-auth/src/: lib.rs  public_types.rs
soroban-sdk-macros/: Cargo.toml  build.rs
soroban-sdk-macros/src/: arbitrary.rs  attribute.rs  derive_args.rs  derive_client.rs  derive_contractimpl_trait_default_fns_not_overridden.rs  derive_contractimpl_trait_macro.rs  derive_enum.rs  derive_enum_int.rs  derive_error_enum_int.rs  derive_event.rs  derive_fn.rs  derive_spec_fn.rs  derive_struct.rs  derive_struct_tuple.rs  derive_trait.rs  derive_trait_macro.rs  derive_type.rs  doc.rs  lib.rs  map_type.rs  path.rs  shaking.rs  spec.rs  spec_marker.rs  symbol.rs  syn_ext.rs
soroban-sdk/docs/: README.md  contracttrait.md
soroban-sdk/doctest_fixtures/: README.md  contract.wasm  contract_with_constructor.wasm
soroban-sdk/src/: _features.rs  _migrating.rs  account.rs  accounts.rs  address.rs  address_payload.rs  alloc.rs  arbitrary.rs  arbitrary_extra.rs  auth.rs  bigint.rs  bytes.rs  constructor_args.rs  contract_data.rs  contract_event.rs  cost_estimate.rs  crypto.rs  custom_account.rs  data.rs  debugger.rs  deploy.rs  deployer.rs  duration.rs  env.rs  error.rs  events.rs  include_spec.rs  into_val_for_contract_fn.rs  invoker.rs  iter.rs  ledger.rs  lib.rs  logger.rs  logging.rs  logs.rs  map.rs  mux_token.rs  muxed_address.rs  namespace.rs  num.rs  (+20 more)
soroban-sdk/test_snapshots/: .gitignore  tests-auth-auth_40_multi_one_address-test_auth_not_allowed_with_separated_tree.json  tests-contract_store-test_storage.json  tests-contractimport-test_functional.json  tests-contractimport-test_register_at_id.json  tests-contractimport-test_reregister_over_wasm_with_rust_impl.json  tests-contractimport-test_reregister_wasm.json  tests-contractimport_with_error-test_functional.json  tests-token_client-test_mock_all_auth.json  tests::contract_snapshot::test.json  tests::contractimport::test_functional.json  tests::contractimport::test_register_at_id.json  tests::contractimport::test_reregister_over_wasm_with_rust_impl.json  tests::contractimport::test_reregister_wasm.json  tests::contractimport_with_error::test_functional.json  tests::token_client::test_mock_auth.json  vec-test-test_vec_raw_val_type.json
soroban-sdk/test_wasms/: README.md  test_contract_data.wasm
soroban-sdk/tests/: compile_fails.rs  contract_add_i32.rs  contract_invoke.rs  contract_udt.rs  contract_udt_enum.rs  contract_udt_struct.rs  contract_udt_struct_tuple.rs  contractfile_with_sha256.rs  contractimport.rs  contractimport_with_sha256.rs  external_storage_next.rs  trybuild.rs  ui.rs
soroban-snapshot-source-rpc/: Cargo.toml  README.md
soroban-snapshot-source-rpc/src/: lib.rs
soroban-spec/: Cargo.toml
soroban-spec-json/: Cargo.toml
soroban-spec-json/src/: lib.rs  types.rs
soroban-spec-markers/: Cargo.toml
soroban-spec-markers/src/: lib.rs
soroban-spec-rust/: Cargo.toml
soroban-spec-rust/src/: gen.rs  lib.rs  syn_ext.rs  trait.rs  types.rs
soroban-spec/root/: package.json
soroban-spec/src/: client.rs  gen.rs  lib.rs  marker.rs  parse.rs  read.rs  resolve.rs  shaking.rs  strip.rs  trait.rs  types.rs  udt_id.rs  visit.rs  wasm.rs
soroban-token-sdk/: Cargo.toml
soroban-token-sdk/src/: _migrating.rs  event.rs  events.rs  lib.rs  metadata.rs
soroban-token-spec/: Cargo.toml  soroban_built_in_token_spec.wasm
soroban-token-spec/src/: lib.rs  public_types.rs  tests.rs
soroban-token-spec/tests/: test.rs  token_contract.rs
stellar-asset-spec/: Cargo.toml
stellar-asset-spec/src/: lib.rs
test_liqpool/: Cargo.toml
test_liqpool/src/: lib.rs
(+1084 files in other folders)
