[workspace]
resolver = "2"

members = [
    "soroban-sdk",
    "soroban-sdk-macros",
    "soroban-meta",
    "soroban-spec",
    "soroban-spec-rust",
    "soroban-ledger-snapshot",
    "soroban-token-sdk",
    "soroban-token-spec",
    "stellar-asset-spec",
    "tests/*",
]

[workspace.package]
version = "27.0.0"
rust-version = "1.91.0"

[workspace.dependencies]
soroban-sdk = { version = "27.0.0", path = "soroban-sdk" }
soroban-sdk-macros = { version = "27.0.0", path = "soroban-sdk-macros" }
soroban-meta = { version = "27.0.0", path = "soroban-meta" }
soroban-spec = { version = "27.0.0", path = "soroban-spec" }
soroban-spec-rust = { version = "27.0.0", path = "soroban-spec-rust" }
soroban-ledger-snapshot = { version = "27.0.0", path = "soroban-ledger-snapshot" }
soroban-token-sdk = { version = "27.0.0", path = "soroban-token-sdk" }
soroban-token-spec = { version = "27.0.0", path = "soroban-token-spec" }
stellar-asset-spec = { version = "27.0.0", path = "stellar-asset-spec" }

# SPIKE: Protocol 28 (CAP-0085, externally managed contract executables) pins
# the three env crates to the productionization branch commit of
# rs-soroban-env#1704, hosted on the sisuresh/rs-soroban-env fork branch
# p28-cap-0085. cargo-deny matches the literal git-URL org, so deny.toml's
# [sources.allow-org] temporarily includes "sisuresh" for the SPIKE (revert to
# just ["stellar"] once the pins re-point to merged stellar/ revs).
# Version constraints are relaxed off the exact `=` pin per lessons.md — the
# git-rev package self-reports 28.0.0; keep major-version compatibility.
# Productionize -> stellar/rs-soroban-env merged SHA (or a released version)
# once #1704 lands; restore `version =` only.
[workspace.dependencies.soroban-env-common]
version = "28.0.0"
git = "https://github.com/sisuresh/rs-soroban-env"
rev = "78026e8b974c89b703c6aceadab9ba4dc2bd4cf4"

[workspace.dependencies.soroban-env-guest]
version = "28.0.0"
git = "https://github.com/sisuresh/rs-soroban-env"
rev = "78026e8b974c89b703c6aceadab9ba4dc2bd4cf4"

[workspace.dependencies.soroban-env-host]
version = "28.0.0"
git = "https://github.com/sisuresh/rs-soroban-env"
rev = "78026e8b974c89b703c6aceadab9ba4dc2bd4cf4"

[workspace.dependencies.stellar-strkey]
version = "=0.0.16"

# SPIKE: Protocol 28 (CAP-0085) pins stellar-xdr to the unmerged
# rs-stellar-xdr#553 branch commit, referenced via sisuresh/rs-stellar-xdr
# (fork-hosted branch p28-cap-0085). This rev self-reports 27.0.0, so the
# version constraint is relaxed to a compatible "27.0.0" (no exact `=`).
# Productionize -> stellar/rs-stellar-xdr merged SHA (or crates.io) once #553 lands.
[workspace.dependencies.stellar-xdr]
version = "27.0.0"
git = "https://github.com/sisuresh/rs-stellar-xdr"
rev = "e1170cd9abb9d1d10cf4a3b7ed4091a109f56b71"
default-features = false

# SPIKE: Protocol 28 (CAP-0085) the pinned rs-soroban-env#1704 env crates
# transitively depend on stellar-xdr from sisuresh/rs-stellar-xdr at the SAME
# rev (e1170cd9) as the direct workspace dep above, so the git source is already
# unified and no [patch] redirect is needed (a sisuresh->sisuresh patch would be
# a self-patch). Restore a patch to stellar/rs-stellar-xdr once #553 lands there.
# [patch."https://github.com/sisuresh/rs-stellar-xdr"]
# stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "e1170cd9abb9d1d10cf4a3b7ed4091a109f56b71", default-features = false }

#[patch.crates-io]
#soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
#soroban-env-guest = { path = "../rs-soroban-env/soroban-env-guest" }
#soroban-env-host = { path = "../rs-soroban-env/soroban-env-host" }
#[patch."https://github.com/stellar/rs-stellar-xdr"]
#stellar-xdr = { path = "../rs-stellar-xdr/" }

[profile.dev]
overflow-checks = true
panic = "abort"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# The release-without-lto profile is useful for testing build cases when lto
# are disabled, such as those like the test_zero test vector. See the test_zero
# README for more details.
[profile.release-without-lto]
inherits = "release"
lto = "off"
