[workspace]
resolver = "2"

members = [
    "soroban-sdk",
    "soroban-sdk-macros",
    "soroban-meta",
    "soroban-spec",
    "soroban-spec-rust",
    "soroban-ledger-snapshot",
    "soroban-token-sdk",
    "soroban-token-spec",
    "stellar-asset-spec",
    "tests/*",
]

[workspace.package]
version = "27.0.2"
rust-version = "1.91.0"

[workspace.dependencies]
soroban-sdk = { version = "27.0.2", path = "soroban-sdk" }
soroban-sdk-macros = { version = "27.0.2", path = "soroban-sdk-macros" }
soroban-meta = { version = "27.0.2", path = "soroban-meta" }
soroban-spec = { version = "27.0.2", path = "soroban-spec" }
soroban-spec-rust = { version = "27.0.2", path = "soroban-spec-rust" }
soroban-ledger-snapshot = { version = "27.0.2", path = "soroban-ledger-snapshot" }
soroban-token-sdk = { version = "27.0.2", path = "soroban-token-sdk" }
soroban-token-spec = { version = "27.0.2", path = "soroban-token-spec" }
stellar-asset-spec = { version = "27.0.2", path = "stellar-asset-spec" }

[workspace.dependencies.soroban-env-common]
version = "=28.0.0"
git = "https://github.com/stellar/rs-soroban-env"
rev = "cfeed8267b09c63af9e6d32d92a27ceed0181d28"

[workspace.dependencies.soroban-env-guest]
version = "=28.0.0"
git = "https://github.com/stellar/rs-soroban-env"
rev = "cfeed8267b09c63af9e6d32d92a27ceed0181d28"

[workspace.dependencies.soroban-env-host]
version = "=28.0.0"
git = "https://github.com/stellar/rs-soroban-env"
rev = "cfeed8267b09c63af9e6d32d92a27ceed0181d28"

[workspace.dependencies.stellar-strkey]
version = "=0.0.16"

[workspace.dependencies.stellar-xdr]
version = "=27.0.0"
git = "https://github.com/stellar/rs-stellar-xdr"
rev = "f13191cc17ad976e12bbbcf3940bf3d1fb68c0a7"
default-features = false

#[patch.crates-io]
#soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
#soroban-env-guest = { path = "../rs-soroban-env/soroban-env-guest" }
#soroban-env-host = { path = "../rs-soroban-env/soroban-env-host" }
#[patch."https://github.com/stellar/rs-stellar-xdr"]
#stellar-xdr = { path = "../rs-stellar-xdr/" }

[profile.dev]
overflow-checks = true
panic = "abort"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# The release-without-lto profile is useful for testing build cases when lto
# are disabled, such as those like the test_zero test vector. See the test_zero
# README for more details.
[profile.release-without-lto]
inherits = "release"
lto = "off"
