[package]
name = "array-from-lit-int"
description = "Convert literal integers to arrays."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version = "0.0.0"
edition = "2021"

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = {version="1.0",features=["full", "extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"
num-bigint = "0.4.3"
pretty_assertions = "1.2.1"
