[package]
name = "cache-to-file"
description = "File caching utilities with locking"
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version = "0.0.1"
edition = "2021"
rust-version.workspace = true

[dependencies]
thiserror = "2.0"
fs2 = "0.4"
