[package]
name = "soroban-sdk-macros"
description = "Soroban SDK macros."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true
doctest = false

[dependencies]
stellar-xdr = { version = "0.0.1", features = ["next", "std"] }
syn = {version="1.0",features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10.3"
darling = "0.14.1"
