[package]
name = "soroban-account"
description = "Soroban account SDK."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.65"

[lib]
doctest = false

[dependencies]
soroban-sdk-macros = { workspace = true }
soroban-sdk = { workspace = true }

[package.metadata.docs.rs]
all-features = true
