[package]
name = "soroban-auth"
description = "Soroban authorization sdk"
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version = "0.0.6"
edition = "2021"
rust-version = "1.64"

[features]
testutils = ["soroban-sdk/testutils", "dep:ed25519-dalek", "dep:rand"]

[dependencies]
soroban-sdk = "0.0.6"

[target.'cfg(not(target_family="wasm"))'.dependencies]
ed25519-dalek = { version = "1.0.1", optional = true }
rand = { version = "0.7.3", optional = true }

[dev_dependencies]
soroban-sdk = { version = "0.0.6", features = ["testutils"] }
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }
