[package]
name = "soroban-auth"
description = "Soroban authorization sdk"
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.66"

[lib]
doctest = false

[features]
testutils = ["soroban-sdk/testutils", "dep:ed25519-dalek", "dep:rand"]
docs = []

[dependencies]
soroban-sdk = { workspace = true }

[target.'cfg(not(target_family="wasm"))'.dependencies]
ed25519-dalek = { version = "1.0.1", optional = true }
rand = { version = "0.7.3", optional = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-strkey = { workspace = true }
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }

[package.metadata.docs.rs]
all-features = true
