[package]
name = "soroban-auth"
description = "Soroban auth SDK."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.67"

[lib]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[target.'cfg(not(target_family="wasm"))'.dependencies]
soroban-env-host = { workspace = true, features = ["vm", "hostfn_log_fmt_values"] }

[features]
testutils = ["soroban-env-host/testutils", "soroban-sdk/testutils"]

[package.metadata.docs.rs]
all-features = true
