[package]
name = "soroban-ledger-fetch"
description = "Utilities for fetching ledger entries from multiple sources"
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
cache-to-file = { workspace = true }
soroban-ledger-fetch-from-meta-storage = { workspace = true }
soroban-ledger-fetch-from-rpc = { workspace = true }
soroban-ledger-fetch-from-history-archive = { workspace = true }
soroban-sdk = { workspace = true }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
