[package]
name = "soroban-ledger-snapshot-history-archive"
description = "Client for accessing Stellar History Archives to retrieve ledger snapshots."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
futures = "0.3"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
sha2 = "0.10"
stellar-xdr = { workspace = true, features = ["std"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2.5"