[package]
name = "soroban-ledger-snapshot-source-live"
description = "Soroban snapshot source that fetches ledger entries from stellar-rpc."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
soroban-ledger-fetch-from-rpc = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
