[package]
name = "soroban-ledger-snapshot-source-tx"
description = "SnapshotSource implementation that downloads ledger meta and searches for ledger entries"
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-xdr = { workspace = true, features = ["curr", "std", "base64", "serde"] }
cargo_metadata = "0.19"
directories = "6.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
flate2 = { version = "1.0", features = ["rust_backend"] }
zstd = "0.13"
fs2 = "0.4"
