[package]
name = "soroban-ledger-snapshot"
description = "Soroban ledger.json file type and functionality."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.66"

[dependencies]
soroban-env-host = { workspace = true, features = ["serde"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
thiserror = "1.0"

[dev_dependencies]
pretty_assertions = "1.2.1"
