[package]
name = "soroban-ledger-snapshot"
description = "Soroban ledger.json file type and functionality."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
soroban-env-host = { workspace = true }
soroban-env-common = {workspace = true, features = ["serde"]}
serde = { version = "1.0.0", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["hex"] }
serde_json = "1.0.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
