[package]
name = "soroban-sdk-macros"
description = "Soroban SDK macros."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.70"

[lib]
proc-macro = true
doctest = false

[build_dependencies]
crate-git-revision = "0.0.6"

[dependencies]
soroban-spec = { workspace = true }
soroban-spec-rust = { workspace = true }
soroban-env-common = { workspace = true }
stellar-xdr = { workspace = true, features = ["next", "std"] }
syn = {version="2.0",features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10.3"
darling = "0.20.0"
sha2 = "0.9.9"

[features]
testutils = []
