[package]
name = "soroban-sdk-macros"
description = "Soroban SDK macros."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
soroban-spec = { workspace = true }
soroban-spec-rust = { workspace = true }
soroban-env-common = { workspace = true }
stellar-xdr = { workspace = true, features = ["curr", "std"] }
syn = {version="2.0.104",features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.14.0"
darling = "0.21.0"
macro-string = "0.1.4"
sha2 = "0.10.7"
heck = "0.5.0"

[features]
testutils = []
