[package]
name = "soroban-sdk"
description = "Soroban SDK."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.74"

[lib]
doctest = false

[dependencies]
soroban-sdk-macros = { workspace = true }
bytes-lit = "0.0.5"

[target.'cfg(target_family="wasm")'.dependencies]
soroban-env-guest = { workspace = true }

[target.'cfg(not(target_family="wasm"))'.dependencies]
soroban-env-host = { workspace = true, features = [] }
soroban-ledger-snapshot = { workspace = true }
stellar-strkey = { workspace = true }
arbitrary = { version = "1.3.0", features = ["derive"], optional = true }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"], optional = true }
# match the version of rand used in dalek
rand = "0.8.5"
ctor = { version = "0.2.1", optional = true }

[dev-dependencies]
soroban-sdk-macros = { workspace = true, features = ["testutils"] }
soroban-env-host = { workspace = true, features = ["testutils"] }
stellar-xdr = { workspace = true, features = ["curr", "std"] }
soroban-spec = { workspace = true }
ed25519-dalek = "2.0.0"
rand = "0.8.5"
ctor = "0.2.1"
hex = "0.4.3"
arbitrary = { version = "1.3.0", features = ["derive"] }
proptest  = "1.2.0"
proptest-arbitrary-interop = "0.1.0"

[features]
alloc = []
testutils = ["soroban-sdk-macros/testutils", "soroban-env-host/testutils", "dep:ed25519-dalek", "dep:arbitrary", "dep:ctor"]
docs = []

[package.metadata.docs.rs]
all-features = true
