[package]
name = "soroban-spec-json"
description = "Soroban contract spec utilities for generating JSON."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.70"

[dependencies]
stellar-xdr = { workspace = true, features = ["next", "std", "serde"] }
soroban-spec = { workspace = true }
thiserror = "1.0.32"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"
sha2 = "0.9.9"

[dev_dependencies]
pretty_assertions = "1.2.1"
