[package]
name = "soroban-spec-rust"
description = "Soroban contract spec utilities for generating Rust."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
stellar-xdr = { workspace = true, features = ["curr", "std", "serde"] }
soroban-spec = { workspace = true }
thiserror = "1.0.32"
syn = {version="2.0",features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
sha2 = "0.10.7"
prettyplease = "0.2.4"

[dev-dependencies]
pretty_assertions = "1.2.1"
